--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ jmespath==0.10.0
 Pillow==7.2.0
 psycopg2==2.8.5
 python-dateutil==2.8.1
+python-decouple==3.3
 pytz==2020.1
 requests==2.24.0
 s3transfer==0.3.3
